Acceso datos MySql

--- a/JV2016-GruposW/jv.config
+++ b/JV2016-GruposW/jv.config
@@ -17,6 +17,7 @@ simulaciones.nombreFichero = simulaciones.dat
 # Bases datos
 db4o.nombreFicheroDB = JVdatos.db4o
 #mySql.url = jdbc:mysql://rino.cierva2.local/jvdatos
-mySql.url = jdbc:mysql://localhost/jvdatos
+mySql.url = jdbc:mysql://172.20.254.134/jvdatos
+#mySql.url = jdbc:mysql://localhost/jvdatos
 mySql.user = alum1
 mySql.passwd = alum1
